--- a/home.html
+++ b/home.html
@@ -5,21 +5,21 @@
     <meta name="keywords" content="Finding the best car insurance company for you, Insurance and investing for your many sides, Finding the best car insurance company for you, The Best Insurance Companies for 2021, The Best Car Insurance Companies for 2021, Faq, Safe. Relaxing. Good to ride in. Subtly decorated., Contact Us">
     <meta name="description" content="">
     <title>RxG Cabinet Remodeling</title>
-    <link rel="stylesheet" href="../css/nicepage.css" media="screen">
-    <link rel="stylesheet" href="../css/Home.css" media="screen">
-    <script class="u-script" type="text/javascript" src="../script/jquery-1.9.1.min.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="../script/nicepage.js" "="" defer=""></script>
+    <link rel="stylesheet" href="/css/nicepage.css" media="screen">
+    <link rel="stylesheet" href="/css/Home.css" media="screen">
+    <script class="u-script" type="text/javascript" src="/script/jquery-1.9.1.min.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="/script/nicepage.js" "="" defer=""></script>
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700|Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
-    <link rel="shortcut icon" href="../images/favicon.ico">
-    <script src="../script/carousel.js"></script>
+    <link rel="shortcut icon" href="/images/favicon.ico">
+    <script src="/script/carousel.js"></script>
 
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
 		"url": "/",
-		"logo": "../images/favicon.ico",
+		"logo": "/images/favicon.ico",
 		"sameAs": [
 				"https://www.facebook.com/remontgr.us/",
 				"https://www.instagram.com/remontgroupus/"
@@ -35,9 +35,9 @@
           <img src="../images/android-chrome-192x192.png" class="u-logo-image u-logo-image-1">
         </a>
         <div class="u-social-icons u-spacing-32 u-social-icons-1">
-          <a class="u-social-url" title="facebook" target="_blank" href="https://www.facebook.com/remontgr.us/"><span class="u-file-icon u-icon u-social-facebook u-social-icon u-icon-1"><img src="../images/facebook.png" alt=""></span>
+          <a class="u-social-url" title="facebook" target="_blank" href="https://www.facebook.com/remontgr.us/"><span class="u-file-icon u-icon u-social-facebook u-social-icon u-icon-1"><img src="/images/facebook.png" alt=""></span>
           </a>
-          <a class="u-social-url" title="instagram" target="_blank" href="https://www.instagram.com/remontgroupus/"><span class="u-file-icon u-icon u-social-icon u-social-instagram u-icon-2"><img src="../images/instagram.png" alt=""></span>
+          <a class="u-social-url" title="instagram" target="_blank" href="https://www.instagram.com/remontgroupus/"><span class="u-file-icon u-icon u-social-icon u-social-instagram u-icon-2"><img src="/images/instagram.png" alt=""></span>
           </a>
         </div>
         <nav class="u-align-left u-menu u-menu-dropdown u-offcanvas u-menu-1">
@@ -72,7 +72,7 @@
       </div></header>
     <section class="u-align-center u-clearfix u-image u-shading u-section-1" id="carousel_c016" data-image-width="1920" data-image-height="1080">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-image u-image-default u-image-1" src="../images/homePageIMG.jpg" alt="" data-image-width="1026" data-image-height="1080">
+        <img class="u-image u-image-default u-image-1" src="/images/homePageIMG.jpg" alt="" data-image-width="1026" data-image-height="1080">
         <p class="u-align-center-xs u-text u-text-body-alt-color u-text-1">
           <span style="font-weight: 700;"></span>Servicing Houston
         </p>
@@ -105,19 +105,19 @@
       <div class="carousel-wrapper">
         <div class="carousel-container">
           <div class="carousel-slide active">
-            <img src="../images/46D5E0F0-FEDD-44F7-A489-9E0F4D990931_1_105_c.jpeg" alt="Image 1">
+            <img src="/images/46D5E0F0-FEDD-44F7-A489-9E0F4D990931_1_105_c.jpeg" alt="Image 1">
           </div>
           <div class="carousel-slide">
-            <img src="../images/IMG_2401.jpeg" alt="Image 2">
+            <img src="/images/IMG_2401.jpeg" alt="Image 2">
           </div>
           <div class="carousel-slide">
-            <img src="../images/IMG_4323.jpeg" alt="Image 3">
+            <img src="/images/IMG_4323.jpeg" alt="Image 3">
           </div>
           <div class="carousel-slide">
-            <img src="../images/IMG_4971.jpeg" alt="Image 3">
+            <img src="/images/IMG_4971.jpeg" alt="Image 3">
           </div>
           <div class="carousel-slide">
-            <img src="../images/IMG_5339.jpeg" alt="Image 3">
+            <img src="/images/IMG_5339.jpeg" alt="Image 3">
           </div>
         </div>
         <!-- Carousel Controls -->
@@ -158,7 +158,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Contact Us</h1>
         <div class="u-expanded-width-xs u-form u-form-1">
-          <form action="./send_email.php" method="POST" class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form" style="padding: 10px" name="form">
+          <form action="/send_email.php" method="POST" class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form" style="padding: 10px" name="form">
             <div class="u-form-group u-form-name u-label-top">
                 <label for="name-3b9a" class="u-label">Name</label>
                 <input type="text" placeholder="Enter your Name" id="name-3b9a" name="FNAME" class="u-border-2 u-border-black u-input u-input-rectangle u-input-1" required="">
