--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="canonical" href="/">
   </head>
   <body class="u-body u-xl-mode" data-lang="en"><header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-fe27"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="home.html" class="u-image u-logo u-image-1" data-image-width="1668" data-image-height="1652">
+        <a href="index.html" class="u-image u-logo u-image-1" data-image-width="1668" data-image-height="1652">
           <img src="../images/android-chrome-192x192.png" class="u-logo-image u-logo-image-1">
         </a>
         <div class="u-social-icons u-spacing-32 u-social-icons-1">
