--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700|Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
     <link rel="shortcut icon" href="/images/favicon.ico">
     <script src="/script/carousel.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script>
+        (function(){
+            emailjs.init("4Sc-SeyqcLW-nYH9f");
+        })();
+    </script>
+    <script src="/script/emailform.js"></script>
 
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
@@ -158,7 +165,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Contact Us</h1>
         <div class="u-expanded-width-xs u-form u-form-1">
-          <form action="/send_email.php" method="POST" class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form" style="padding: 10px" name="form">
+          <form method="POST" class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form" style="padding: 10px" name="form">
             <div class="u-form-group u-form-name u-label-top">
                 <label for="name-3b9a" class="u-label">Name</label>
                 <input type="text" placeholder="Enter your Name" id="name-3b9a" name="FNAME" class="u-border-2 u-border-black u-input u-input-rectangle u-input-1" required="">
